# ceph-ansible

./: .ansible.cfg  .deepsource.toml  .gitignore  .gitmodules  .mergify.yml  .readthedocs.yaml  .travis.yml  .yamllint  CONTRIBUTING.md  Makefile  README-DISKS.md  README-MULTISITE-MULTIREALM.md  README-MULTISITE.md  README.md  README.rst  RELEASE-NOTE-STABLE-3.1.md  RELEASE-NOTE.md  Vagrantfile  Vagrantfile.openstack  action_plugins  ansible-role-requirements.yml  ansible.cfg  bootstrap-ansible.sh  ceph-aio-no-vagrant.sh  ceph-ansible.spec.in  checkrole.yml.sample  choose_disk.yml  cluster-maintenance.yml  cluster-os-migration.yml  dashboard.yml  dummy-ansible-hosts  example-ansible-role-requirements.yml  generate_group_vars_sample.sh  generate_sha1_dirtests.sh  hosts  hosts.ini.sample  id_rsa.pub  install-ansible.sh  localrepo-site.yml.sample  maintenance.yml  (+43 more)
.github/: FUNDING.yml  stale.yml
roles/ansible-config_template/: .gitignore  .gitreview  CONTRIBUTING.rst  LICENSE  README.rst  Vagrantfile  action_plugins  bindep.txt  galaxy.yml  manual-test.rc  run_tests.sh  setup.cfg  setup.py  tox.ini
roles/ansible-config_template/doc/: Makefile  requirements.txt
roles/ansible-config_template/doc/source/: conf.py  index.rst
roles/ansible-config_template/examples/: ansible-role-requirements.yml
roles/ansible-config_template/meta/: .galaxy_install_info  main.yml
roles/ansible-config_template/tests/: ansible-role-requirements.yml  inventory  test-common-tasks.yml  test-ini.yml  test-json.yml  test-yaml.yml  test.yml
roles/ansible-config_template/zuul.d/: project.yaml
(+1774 files in other folders)
