[metadata]
name = ansible-config_template
summary = Config Template plugin for Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ansible-config_template/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
skip_authors = True
skip_changelog = True

[wheel]
universal = 1

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/plugins/action = action/*
    share/ansible/plugins/modules = library/*
